--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <p>Status połączenia: <strong>Aktywne</strong></p> 
 
-        <p>Wersja strony: <span class="version">1.0</span></p> 
+        <p>Wersja strony: <span class="version">2.0 - Zaktualizowano</span></p> 
 
     </div> 
 
